# qbench

./: .gitignore  DOCKER_BUILD_GUIDE.md  Dockerfile.purple-agent-baseline  Dockerfile.qbench-evaluator  Makefile  README.md  pyproject.toml
examples/: __init__.py
examples/agentbeats/: README.md  gpt52_prompt.py  gpt52_purple_agent.py
examples/configs/: README.md  basic_eval.toml  parallel_eval.toml  seed_selection.toml
examples/standalone/: README.md  __init__.py  agent.py
scenarios/: README.md  SCENARIO_CATEGORIES.md
scenarios/backlog_cap_stability_guard/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/cancel_then_rearrival_consistency/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/cancellation_cascade_mass/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/cold_start_to_surge/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/conflicting_duplicate_id_robustness/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/correlated_burst_cluster/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/deceptive_calm_then_rate_shift/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/double_peak_bursts/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/duplicate_arrival_idempotency/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/early_burst_then_calm/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/fairness_anti_starvation/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/gradual_capacity_increase/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/hard_deadline_cutoff/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/heavy_tail_random_bursts/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/infeasible_overload_must_reject/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/late_burst_slack_trap/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/late_cancellation_backfill/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/mixed_deadlines_tight_vs_loose/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/mixed_priorities_tight_deadlines/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/no_traffic_health_check/: info.md  seed_3.json
scenarios/periodic_spikes_wave_load/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/planned_capacity_drop_window/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/priority_mix_shift/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/ramp_down_recovery/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/ramp_up_load/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/rolling_deadlines_stream/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/routine_flood_with_urgent_trickle/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/routine_spam_adversarial_load/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/same_deadline_conflict/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/stale_cancel_out_of_order/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/steady_low_load_baseline/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/steady_near_capacity/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/temporary_capacity_boost_window/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/unannounced_capacity_drop_shock/: info.md  seed_1.json  seed_2.json  seed_3.json
scenarios/urgent_flood_strict_sla/: info.md  seed_1.json  seed_2.json  seed_3.json
scripts/: README.md  run_full_benchmark.sh  run_quick_test.sh
src/agentbeats/: __init__.py  client.py  client_cli.py  rate_limiter.py  run_scenario.py  (+1 more)
tests/: __init__.py  test_action.py  test_env.py  test_integration.py  test_loader.py  test_seed_validation.py  test_task.py
(+38 files in other folders)
